add a result box and a vanish button

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         </canvas>
         <div class="output">
             <img id="photo" alt="The screen capture will appear in this box.">
+            <button id="vanishbutton">Vanish mask</button>
+        </div>
+        <div class="vanished">
+            <img id="result">
         </div>
         <p>
             Visit our article <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebRTC_API/Taking_still_photos">
