--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </p>
         <div class="camera">
             <video id="video">Video stream not available.</video>
+            <svg id="videoguideline"></svg>
             <button id="startbutton">Take photo</button>
         </div>
         <canvas id="canvas">
