--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="camera">
             <video id="video">Video stream not available.</video>
             <svg id="videoguideline"></svg>
+            <img id="magicmirror" src="magicmirror.png">
             <button id="startbutton">Take photo</button>
         </div>
         <canvas id="canvas">
