--- a/index.html
+++ b/index.html
@@ -12,29 +12,27 @@
 <body>
     <div class="contentarea">
         <h1>
-            MDN - WebRTC: Still photo capture demo
+            魔法の鏡
         </h1>
         <p>
-            This example demonstrates how to set up a media stream using your built-in webcam, fetch an image from that
-            stream, and create a PNG using that image.
+            鏡よ鏡、マスクで隠された私の本当の姿はなぁに？
         </p>
-        <a href="https://b.hatena.ne.jp/entry/" class="hatena-bookmark-button" data-hatena-bookmark-layout="vertical-normal" data-hatena-bookmark-lang="en" title="このエントリーをはてなブックマークに追加"><img src="https://b.st-hatena.com/images/v4/public/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="https://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
-        <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-dnt="true" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        <div class="camera">
-            <video id="video">Video stream not available.</video>
-            <svg id="videoguideline"></svg>
+        <div id="magic">
+            <div class="mirrorvideo">
+                <video id="video">Video stream not available.</video>
+            </div>
+            <div class="mirror">
+                <img id="photo" alt="The screen capture will appear in this box.">
+            </div>
+            <div class="mirror">
+                <img id="result">
+            </div>
             <img id="magicmirror" src="magicmirror.png">
-            <button id="startbutton">Take photo</button>
+            <canvas id="canvas"></canvas>
         </div>
-        <canvas id="canvas">
-        </canvas>
-        <div class="output">
-            <img id="photo" alt="The screen capture will appear in this box.">
-            <button id="vanishbutton">Vanish mask</button>
-        </div>
-        <div class="vanished">
-            <img id="result">
-        </div>
+        <button id="startbutton">Take photo</button>
+        <button id="vanishbutton">Vanish mask</button>
+        <button id="resetbutton">Reset</button>
         <p>
             Visit our article <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebRTC_API/Taking_still_photos">
                 Taking still photos with WebRTC</a> to learn more about the technologies used here.
